toolbar overflow fixed (auto -> scroll)

--- a/imnologio_app/style.css
+++ b/imnologio_app/style.css
@@ -45,13 +45,14 @@ a{
     display: flex;
     justify-content: space-between;
     background-color: rgba(211, 211, 211, 0.432);
+    overflow: auto;
 }
 
 .tool{
     height: 3em;
     display: flex;
     justify-content: flex-start;
-    border: red solid 1px;
+    /* overflow: auto; */
 }
 
 .tool button{
